# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1056 2011/02/05 15:00:53 mpagano Exp $

*git-sources-2.6.38_rc3-r4 (05 Feb 2011)

  05 Feb 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc3-r4.ebuild:
  Version bump

*git-sources-2.6.38_rc3-r3 (04 Feb 2011)

  04 Feb 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc3-r3.ebuild:
  Version bump

*git-sources-2.6.38_rc3-r2 (03 Feb 2011)

  03 Feb 2011; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc3-r2.ebuild:
  Version bump

*git-sources-2.6.38_rc3-r1 (02 Feb 2011)

  02 Feb 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc3-r1.ebuild:
  Version bump

*git-sources-2.6.38_rc3 (01 Feb 2011)

  01 Feb 2011; Mike Pagano <mpagano@gentoo.org> -git-sources-2.6.38_rc1.ebuild,
  -git-sources-2.6.38_rc1-r1.ebuild, -git-sources-2.6.38_rc1-r2.ebuild,
  -git-sources-2.6.38_rc1-r3.ebuild, +git-sources-2.6.38_rc3.ebuild:
  Version bump and old version removal

*git-sources-2.6.38_rc2-r9 (01 Feb 2011)

  01 Feb 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc2-r9.ebuild:
  Version bump

*git-sources-2.6.38_rc2-r8 (31 Jan 2011)

  31 Jan 2011; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc2-r8.ebuild:
  Version bump

*git-sources-2.6.38_rc2-r7 (28 Jan 2011)

  28 Jan 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc2-r7.ebuild:
  Version bump

*git-sources-2.6.38_rc2-r6 (28 Jan 2011)

  28 Jan 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc2-r6.ebuild:
  Version bump

*git-sources-2.6.38_rc2-r5 (26 Jan 2011)

  26 Jan 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc2-r5.ebuild:
  Version bump

*git-sources-2.6.38_rc2-r3 (25 Jan 2011)

  25 Jan 2011; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc2-r3.ebuild:
  Version bump
