@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1056 2011/02/05 15:00:53 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1057 2011/02/07 02:27:00 mpagano Exp $
+
+*git-sources-2.6.38_rc3-r5 (07 Feb 2011)
+
+  07 Feb 2011; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.38_rc3-r5.ebuild:
+  Version bump
 
 *git-sources-2.6.38_rc3-r4 (05 Feb 2011)
 
